--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "13.14.0",
+    "node": "14.16.0",
     "npm": "7.11.1"
   },
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "server": "nodemon index.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "concurrently": "^6.0.2",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
@@ -31,7 +35,8 @@
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "pg": "^8.6.0",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "stripe": "^8.145.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
