--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "engines": {
     "node": "14.16.0",
-    "npm": "7.11.1"
+    "npm": "7.11.2"
   },
   "scripts": {
     "start": "node index.js",
@@ -34,6 +34,7 @@
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
+    "paystack": "^2.0.1",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2",
     "stripe": "^8.145.0"
